// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component frames an empty reflection 1`] = `<div />`;

exports[`Component renders reflection with styles 1`] = `
<body>
  <div>
    <div
      class="classOne"
    >
      <span
        class="classTwo"
      />
    </div>
    <p
      class="classThree"
    >
      Mock text node
    </p>
  </div>
  <div
    id="test-node-mirror"
  >
    <div>
      <div
        class="_4fzzzxj"
        style="pointer-events: none;"
      >
        <style
          type="text/css"
        />
        <div
          class="_4fzzzxj"
          style="height: 10px; pointer-events: none;"
        >
          <style
            type="text/css"
          />
          <span
            class="_4fzzzxj"
            style="font-size: 1.3em; display: block; width: 20px; margin: 0px auto; pointer-events: none;"
          >
            <style
              type="text/css"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Hook returns an empty reflection 1`] = `
<Mirror
  reflect={null}
/>
`;

exports[`Hook starts reflecting node 1`] = `
<Mirror
  reflect={<div />}
/>
`;
